chore: update openapi specification
